Revert "broken shit compiler"
This reverts commit 43fde63f1069807b2bff0997327fa359fa9f3edb.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,9 +69,9 @@ jobs:
     - name: Build Algorithms (x86)
       run: |
         msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-sse2
-        copy bin\Release\Win32\AlgorithmsDll-Win32-sse2.dll bin\Release\Win32\AlgorithmsDll-Win32-avx.dll
-        copy bin\Release\Win32\AlgorithmsDll-Win32-sse2.dll bin\Release\Win32\AlgorithmsDll-Win32-avx2.dll
-        copy bin\Release\Win32\AlgorithmsDll-Win32-sse2.dll bin\Release\Win32\AlgorithmsDll-Win32-avx512.dll
+        msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-avx
+        msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-avx2
+        msbuild AlgorithmsDll.sln /p:Configuration=Release /p:Platform=x86-avx512
       
     - name: Build Algorithms (x64)
       run: |
