--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "concurrentqueue"]
 	path = concurrentqueue
 	url = https://github.com/cameron314/concurrentqueue.git
-[submodule "mbedtls"]
-	path = mbedtls
+[submodule "Algorithms/deps/mbedtls"]
+	path = Algorithms/deps/mbedtls
 	url = https://github.com/ARMmbed/mbedtls.git
 [submodule "langcomp"]
 	path = langcomp
@@ -13,18 +13,18 @@
 [submodule "tiny-json"]
 	path = tiny-json
 	url = https://github.com/rafagafe/tiny-json.git
-[submodule "xxHash"]
-	path = xxHash
+[submodule "Algorithms/deps/xxHash"]
+	path = Algorithms/deps/xxHash
 	url = https://github.com/Cyan4973/xxHash.git
-[submodule "BLAKE3"]
-	path = BLAKE3
+[submodule "Algorithms/deps/BLAKE3"]
+	path = Algorithms/deps/BLAKE3
 	url = https://github.com/BLAKE3-team/BLAKE3.git
-[submodule "XKCP"]
-	path = XKCP
+[submodule "Algorithms/deps/XKCP"]
+	path = Algorithms/deps/XKCP
 	url = https://github.com/XKCP/XKCP.git
 [submodule "mctrl"]
 	path = mctrl
 	url = https://github.com/mity/mctrl.git
-[submodule "streebog"]
-	path = streebog
+[submodule "Algorithms/deps/streebog"]
+	path = Algorithms/deps/streebog
 	url = https://github.com/adegtyarev/streebog.git
