--- a/Algorithms/AlgorithmsDll.vcxproj
+++ b/Algorithms/AlgorithmsDll.vcxproj
@@ -115,60 +115,60 @@
     <Flavor>avx512</Flavor>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="..\mbedtls\library\md2.c" />
-    <ClCompile Include="..\mbedtls\library\md4.c" />
-    <ClCompile Include="..\mbedtls\library\md5.c" />
-    <ClCompile Include="..\mbedtls\library\platform_util.c" />
-    <ClCompile Include="..\mbedtls\library\ripemd160.c" />
-    <ClCompile Include="..\mbedtls\library\sha1.c" />
-    <ClCompile Include="..\mbedtls\library\sha256.c" />
-    <ClCompile Include="..\mbedtls\library\sha512.c" />
-    <ClCompile Include="..\streebog\gost3411-2012-core.c" />
+    <ClCompile Include="deps\mbedtls\library\md2.c" />
+    <ClCompile Include="deps\mbedtls\library\md4.c" />
+    <ClCompile Include="deps\mbedtls\library\md5.c" />
+    <ClCompile Include="deps\mbedtls\library\platform_util.c" />
+    <ClCompile Include="deps\mbedtls\library\ripemd160.c" />
+    <ClCompile Include="deps\mbedtls\library\sha1.c" />
+    <ClCompile Include="deps\mbedtls\library\sha256.c" />
+    <ClCompile Include="deps\mbedtls\library\sha512.c" />
+    <ClCompile Include="deps\streebog\gost3411-2012-core.c" />
     <ClCompile Include="blake2sp.c" />
-    <ClCompile Include="..\BLAKE3\c\blake3.c" />
-    <ClCompile Include="..\BLAKE3\c\blake3_sse2.c">
+    <ClCompile Include="deps\BLAKE3\c\blake3.c" />
+    <ClCompile Include="deps\BLAKE3\c\blake3_sse2.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='sse2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\BLAKE3\c\blake3_sse41.c">
+    <ClCompile Include="deps\BLAKE3\c\blake3_sse41.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\BLAKE3\c\blake3_avx2.c">
+    <ClCompile Include="deps\BLAKE3\c\blake3_avx2.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\BLAKE3\c\blake3_avx512.c">
+    <ClCompile Include="deps\BLAKE3\c\blake3_avx512.c">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|Win32'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="blake3_dispatch.c" />
-    <ClCompile Include="..\BLAKE3\c\blake3_neon.c">
+    <ClCompile Include="deps\BLAKE3\c\blake3_neon.c">
       <ExcludedFromBuild Condition="'$(Flavor)'!='neon'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\BLAKE3\c\blake3_portable.c" />
+    <ClCompile Include="deps\BLAKE3\c\blake3_portable.c" />
     <ClCompile Include="crc32.c" />
     <ClCompile Include="Hasher.cpp" />
     <ClCompile Include="xxhash.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\streebog\gost3411-2012-const.h" />
-    <ClInclude Include="..\streebog\gost3411-2012-core.h" />
-    <ClInclude Include="..\streebog\gost3411-2012-mmx.h" />
-    <ClInclude Include="..\streebog\gost3411-2012-precalc.h" />
-    <ClInclude Include="..\streebog\gost3411-2012-ref.h" />
-    <ClInclude Include="..\streebog\gost3411-2012-sse2.h" />
-    <ClInclude Include="..\streebog\gost3411-2012-sse41.h" />
-    <ClInclude Include="..\xxHash\xxhash.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-const.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-core.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-mmx.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-precalc.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-ref.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-sse2.h" />
+    <ClInclude Include="deps\streebog\gost3411-2012-sse41.h" />
+    <ClInclude Include="deps\xxHash\xxhash.h" />
     <ClInclude Include="blake2sp.h" />
-    <ClInclude Include="..\BLAKE3\c\blake3.h" />
-    <ClInclude Include="..\BLAKE3\c\blake3_impl.h" />
+    <ClInclude Include="deps\BLAKE3\c\blake3.h" />
+    <ClInclude Include="deps\BLAKE3\c\blake3_impl.h" />
     <ClInclude Include="streebog\gost3411-2012-config.h" />
     <ClInclude Include="XKCP\config.h" />
     <ClInclude Include="crc32.h" />
@@ -176,25 +176,25 @@
     <ClInclude Include="mbedtls_config.h" />
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="..\BLAKE3\c\blake3_sse2_x86-64_windows_msvc.asm">
+    <MASM Include="deps\BLAKE3\c\blake3_sse2_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='sse2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
     </MASM>
-    <MASM Include="..\BLAKE3\c\blake3_sse41_x86-64_windows_msvc.asm">
+    <MASM Include="deps\BLAKE3\c\blake3_sse41_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
     </MASM>
-    <MASM Include="..\BLAKE3\c\blake3_avx2_x86-64_windows_msvc.asm">
+    <MASM Include="deps\BLAKE3\c\blake3_avx2_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx2|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
     </MASM>
-    <MASM Include="..\BLAKE3\c\blake3_avx512_x86-64_windows_msvc.asm">
+    <MASM Include="deps\BLAKE3\c\blake3_avx512_x86-64_windows_msvc.asm">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Flavor)|$(Platform)'=='avx512|x64'">false</ExcludedFromBuild>
     </MASM>
@@ -233,7 +233,7 @@
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup>
-    <IncludePath>$(ProjectDir)streebog;$(SolutionDir)mbedtls\include;$(ProjectDir)XKCP;$(SolutionDir)XKCP\lib\high\Keccak\;$(SolutionDir)XKCP\lib\high\Keccak\FIPS202\;$(SolutionDir)XKCP\lib\high\Keccak\SP800-185\;$(SolutionDir)XKCP\lib\high\common\;$(SolutionDir)XKCP\lib\high\Keccak\PRG\;$(SolutionDir)XKCP\lib\high\Ketje\;$(SolutionDir)XKCP\lib\high\Keyak\;$(SolutionDir)XKCP\lib\high\KangarooTwelve\;$(SolutionDir)XKCP\lib\high\Kravatte\;$(SolutionDir)XKCP\lib\high\Xoofff\;$(SolutionDir)XKCP\lib\high\Xoodyak\;$(SolutionDir)XKCP\lib\common\;$(SolutionDir)XKCP\lib\low\KeccakP-200\ref\;$(SolutionDir)XKCP\lib\low\KeccakP-400\ref\;$(SolutionDir)XKCP\lib\low\KeccakP-800\plain\;$(SolutionDir)XKCP\lib\low\KeccakP-800\plain\lcua\;$(SolutionDir)XKCP\lib\low\KeccakP-1600\common\;$(SolutionDir)XKCP\lib\low\KeccakP-1600\plain-64bits\;$(SolutionDir)XKCP\lib\low\common\;$(SolutionDir)XKCP\lib\low\KeccakP-1600\plain-64bits\lcua-shld\;$(SolutionDir)XKCP\lib\low\KeccakP-1600-times2\SIMD128\;$(SolutionDir)XKCP\lib\low\KeccakP-1600-times2\SIMD128\SSSE3-ua\;$(SolutionDir)XKCP\lib\low\KeccakP-1600-times4\fallback-on2\;$(SolutionDir)XKCP\lib\low\KeccakP-1600-times8\fallback-on2\;$(SolutionDir)XKCP\lib\low\Xoodoo\;$(SolutionDir)XKCP\lib\low\Xoodoo\SSE2\;$(SolutionDir)XKCP\lib\low\Xoodoo-times4\SSSE3\;$(SolutionDir)XKCP\lib\low\Xoodoo-times8\fallback-on1\;$(SolutionDir)XKCP\lib\low\Xoodoo-times16\fallback-on1\;$(SolutionDir)XKCP\lib\low\Ketje\SnP-compliant\;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)streebog;$(ProjectDir)deps\mbedtls\include;$(ProjectDir)XKCP;$(ProjectDir)deps\XKCP\lib\high\Keccak\;$(ProjectDir)deps\XKCP\lib\high\Keccak\FIPS202\;$(ProjectDir)deps\XKCP\lib\high\Keccak\SP800-185\;$(ProjectDir)deps\XKCP\lib\high\common\;$(ProjectDir)deps\XKCP\lib\high\Keccak\PRG\;$(ProjectDir)deps\XKCP\lib\high\Ketje\;$(ProjectDir)deps\XKCP\lib\high\Keyak\;$(ProjectDir)deps\XKCP\lib\high\KangarooTwelve\;$(ProjectDir)deps\XKCP\lib\high\Kravatte\;$(ProjectDir)deps\XKCP\lib\high\Xoofff\;$(ProjectDir)deps\XKCP\lib\high\Xoodyak\;$(ProjectDir)deps\XKCP\lib\common\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-200\ref\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-400\ref\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-800\plain\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-800\plain\lcua\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600\common\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600\plain-64bits\;$(ProjectDir)deps\XKCP\lib\low\common\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600\plain-64bits\lcua-shld\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600-times2\SIMD128\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600-times2\SIMD128\SSSE3-ua\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600-times4\fallback-on2\;$(ProjectDir)deps\XKCP\lib\low\KeccakP-1600-times8\fallback-on2\;$(ProjectDir)deps\XKCP\lib\low\Xoodoo\;$(ProjectDir)deps\XKCP\lib\low\Xoodoo\SSE2\;$(ProjectDir)deps\XKCP\lib\low\Xoodoo-times4\SSSE3\;$(ProjectDir)deps\XKCP\lib\low\Xoodoo-times8\fallback-on1\;$(ProjectDir)deps\XKCP\lib\low\Xoodoo-times16\fallback-on1\;$(ProjectDir)deps\XKCP\lib\low\Ketje\SnP-compliant\;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)bin\$(ConfigurationReal)\$(Platform)\</OutDir>
     <TargetName>$(ProjectName)-$(Platform)-$(Flavor)</TargetName>
     <IntDir>$(SolutionDir)obj\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
@@ -275,7 +275,7 @@
       <EnableUAC>false</EnableUAC>
       <AdditionalOptions>/PDBALTPATH:%_PDB% /Brepro %(AdditionalOptions)</AdditionalOptions>
       <!--<NoEntryPoint>true</NoEntryPoint>-->
-      <AdditionalDependencies>$(SolutionDir)obj\libXKCP-$(Platform)-$(Flavor).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)deps\XKCP\bin\libXKCP-$(Platform)-$(Flavor).lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(ConfigurationReal)'=='Release'">
