make colors configurable, closes #106, closes #74

--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -49,47 +49,77 @@ BEGIN
     PUSHBUTTON      "v",IDC_BUTTON_VT,184,150,16,16,BS_ICON | WS_DISABLED
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 465, 272
+IDD_SETTINGS DIALOGEX 0, 0, 723, 320
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "*"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,168,258
+    CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOSCROLL | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,168,258
     CONTROL         "IDS_DISPLAY_UPPERCASE",IDC_CHECK_DISPLAY_UPPERCASE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,6,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,6,534,11
     CONTROL         "IDS_LOOK_FOR_SUMFILES",IDC_CHECK_LOOK_FOR_SUMFILES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,18,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,18,534,11
     CONTROL         "IDS_SUMFILE_UPPERCASE",IDC_CHECK_SUMFILE_UPPERCASE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,30,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,30,534,11
     CONTROL         "IDS_SUMFILE_UNIX_ENDINGS",IDC_CHECK_SUMFILE_UNIX_ENDINGS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,42,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,42,534,11
     CONTROL         "IDS_SUMFILE_USE_DOUBLE_SPACE",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,54,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,54,534,11
     CONTROL         "IDS_SUMFILE_FORWARD_SLASHES",IDC_CHECK_SUMFILE_FORWARD_SLASHES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,66,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,66,534,11
     CONTROL         "IDS_SUMFILE_DOT_HASH_COMPATIBLE",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,78,275,11
-    CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,90,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,78,534,11
+    CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,90,534,11
     CONTROL         "IDS_SUMFILE_BANNER_DATE",IDC_CHECK_SUMFILE_BANNER_DATE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,102,263,11
-    PUSHBUTTON      "IDS_CHECK_FOR_UPDATES",IDC_BUTTON_CHECK_FOR_UPDATES,360,252,98,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,102,522,11
+    PUSHBUTTON      "IDS_CHECK_FOR_UPDATES",IDC_BUTTON_CHECK_FOR_UPDATES,6,294,168,14
     CONTROL         "IDS_CLIPBOARD_AUTOENABLE",IDC_CHECK_CLIPBOARD_AUTOENABLE,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,180,114,275,22
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,180,114,534,11
     CONTROL         "IDS_CLIPBOARD_AUTOENABLE_IF_NONE",IDC_CHECK_CLIPBOARD_AUTOENABLE_IF_NONE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,138,263,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,126,522,11
     CONTROL         "IDS_CLIPBOARD_AUTOENABLE_EXCLUSIVE",IDC_CHECK_CLIPBOARD_AUTOENABLE_EXCLUSIVE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,150,263,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,138,522,11
     CONTROL         "IDS_CHECKAGAINST_STRICT",IDC_CHECK_CHECKAGAINST_STRICT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,174,275,11
-    CONTROL         "IDS_HASH_SUMFILE_TOO",IDC_CHECK_HASH_SUMFILE_TOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,186,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,162,534,11
+    CONTROL         "IDS_HASH_SUMFILE_TOO",IDC_CHECK_HASH_SUMFILE_TOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,174,534,11
     CONTROL         "IDS_CHECKAGAINST_AUTOFORMAT",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,163,275,11
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,150,534,11
     CONTROL         "IDS_SUMFILE_ALGORITHM_ONLY",IDC_CHECK_SUMFILE_ALGORITHM_ONLY,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,198,275,11
-    ICON            IDI_ICON1,IDC_ICON_1,177,244,20,20
-    LTEXT           "OpenHashTab",IDC_PROJECT_NAME,201,244,255,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,186,534,11
+    ICON            IDI_ICON1,IDC_ICON_1,6,270,21,20
+    LTEXT           "OpenHashTab",IDC_PROJECT_NAME,30,270,144,12
     CONTROL         "<a href=""https://github.com/namazso/OpenHashTab"">github.com/namazso/OpenHashTab</a>",IDC_PROJECT_LINK,
-                    "SysLink",WS_TABSTOP,201,254,156,12
+                    "SysLink",WS_TABSTOP,30,281,144,12
+    GROUPBOX        "IDS_UNKNOWN_GROUP",IDC_UNKNOWN_GROUP,180,198,102,114
+    CONTROL         "IDS_FOREGROUND",IDC_UNKNOWN_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,186,210,90,12
+    CTEXT           "0123456789ABCDEF",IDC_UNKNOWN_SAMPLE,186,294,90,12
+    PUSHBUTTON      "fg color",IDC_UNKNOWN_FG_BTN,186,228,90,18
+    CONTROL         "IDS_BACKGROUND",IDC_UNKNOWN_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,186,252,90,12
+    PUSHBUTTON      "bg color",IDC_UNKNOWN_BG_BTN,186,270,90,18
+    GROUPBOX        "IDS_MATCH_GROUP",IDC_MATCH_GROUP,288,198,102,114
+    CONTROL         "IDS_FOREGROUND",IDC_MATCH_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,294,210,90,12
+    CTEXT           "0123456789ABCDEF",IDC_MATCH_SAMPLE,294,294,90,12
+    PUSHBUTTON      "fg color",IDC_MATCH_FG_BTN,294,228,90,18
+    CONTROL         "IDS_BACKGROUND",IDC_MATCH_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,294,252,90,12
+    PUSHBUTTON      "bg color",IDC_MATCH_BG_BTN,294,270,90,18
+    GROUPBOX        "IDS_MISMATCH_GROUP",IDC_MISMATCH_GROUP,396,198,102,114
+    CONTROL         "IDS_FOREGROUND",IDC_MISMATCH_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,402,210,90,12
+    CTEXT           "0123456789ABCDEF",IDC_MISMATCH_SAMPLE,402,294,90,12
+    PUSHBUTTON      "fg color",IDC_MISMATCH_FG_BTN,402,228,90,18
+    CONTROL         "IDS_BACKGROUND",IDC_MISMATCH_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,402,252,90,12
+    PUSHBUTTON      "bg color",IDC_MISMATCH_BG_BTN,402,270,90,18
+    GROUPBOX        "IDS_INSECURE_GROUP",IDC_INSECURE_GROUP,504,198,102,114
+    CONTROL         "IDS_FOREGROUND",IDC_INSECURE_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,210,90,12
+    CTEXT           "0123456789ABCDEF",IDC_INSECURE_SAMPLE,510,294,90,12
+    PUSHBUTTON      "fg color",IDC_INSECURE_FG_BTN,510,228,90,18
+    CONTROL         "IDS_BACKGROUND",IDC_INSECURE_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,252,90,12
+    PUSHBUTTON      "bg color",IDC_INSECURE_BG_BTN,510,270,90,18
+    GROUPBOX        "IDS_ERROR_GROUP",IDC_ERROR_GROUP,612,198,102,114
+    CONTROL         "IDS_FOREGROUND",IDC_ERROR_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,618,210,90,12
+    CTEXT           "0123456789ABCDEF",IDC_ERROR_SAMPLE,618,294,90,12
+    PUSHBUTTON      "fg color",IDC_ERROR_FG_BTN,618,228,90,18
+    CONTROL         "IDS_BACKGROUND",IDC_ERROR_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,618,252,90,12
+    PUSHBUTTON      "bg color",IDC_ERROR_BG_BTN,618,270,90,18
 END
 
 
@@ -114,8 +144,8 @@ BEGIN
 
     IDD_SETTINGS, DIALOG
     BEGIN
-        RIGHTMARGIN, 187
-        BOTTOMMARGIN, 268
+        RIGHTMARGIN, 714
+        BOTTOMMARGIN, 316
     END
 END
 #endif    // APSTUDIO_INVOKED
