--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,20 @@ project(OpenHashTab)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
+string(REGEX REPLACE "/Ob1" "/Ob2" CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
+string(REGEX REPLACE "/Ob1" "/Ob2" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
+
+add_compile_options(-flto /guard:cf /guard:ehcont)
+
+add_link_options(/guard:cf /guard:ehcont)
+
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 add_subdirectory(AlgorithmsDlls)
+add_subdirectory(Localization)
+
 add_subdirectory(LegacyAlgorithms)
+add_subdirectory(Benchmark)
