--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,60 +48,37 @@ jobs:
           Echo ("version_minor=" + $VersionMinor) >> $Env:GITHUB_OUTPUT;
           Echo ("version_patch=" + $VersionPatch) >> $Env:GITHUB_OUTPUT;
 
-      - name: Set up MSBuild
-        uses: microsoft/setup-msbuild@v1
-
       - name: Build Algorithms
         run: |
           cd ${{ github.workspace }}
           .\build_algorithms.ps1
 
-#      - name: Build Solution (Win32)
-#        run: |
-#          msbuild "-property:Configuration=Release;Platform=x86;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
-#
-#      - name: Build Solution (x64)
-#        run: |
-#          msbuild "-property:Configuration=Release;Platform=x64;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
-#
-#      - name: Build Solution (ARM64)
-#        run: |
-#          msbuild "-property:Configuration=Release;Platform=ARM64;CI_VERSION=${{ steps.checktag.outputs.version }};CI_VERSION_MAJOR=${{ steps.checktag.outputs.version_major }};CI_VERSION_MINOR=${{ steps.checktag.outputs.version_minor }};CI_VERSION_PATCH=${{ steps.checktag.outputs.version_patch }}" OpenHashTab.sln
-#
-#      - name: Build Installer
-#        run: |
-#          iscc .\installer.iss -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
-#
-#      - name: Pack artifacts
-#        run: |
-#          7z a artifacts.7z .\bin\Release\
-#
-#      - name: Upload setup
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: setup
-#          path: |
-#            .\OpenHashTab_setup.exe
-#
-#      - name: Upload artifacts
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: artifacts
-#          path: |
-#            .\artifacts.7z
-#
-#      - name: Pack release symbols
-#        if: ${{ steps.checktag.outputs.is_release == 'yes' }}
-#        run: |
-#          cd ${{ github.workspace }}
-#          7z a symbols.7z .\bin\Release\*\*.pdb
-#
-#      - name: Release
-#        uses: softprops/action-gh-release@v1
-#        if: ${{ steps.checktag.outputs.is_release == 'yes' }}
-#        with:
-#          files: |
-#            .\OpenHashTab_setup.exe
-#          asset_path: .\symbols.7z
-#          name: Release ${{ steps.checktag.outputs.version }}
-#          prerelease: true
+      - name: Build OpenHashTab
+        run: |
+          cd ${{ github.workspace }}
+          $Env:CI_VERSION = ${{ steps.checktag.outputs.version }};
+          $Env:CI_VERSION_MAJOR = ${{ steps.checktag.outputs.version_major }};
+          $Env:CI_VERSION_MINOR = ${{ steps.checktag.outputs.version_minor }};
+          $Env:CI_VERSION_PATCH = ${{ steps.checktag.outputs.version_patch }};
+          .\build_openhashtab.ps1
+
+      - name: Build Installer
+        run: |
+          iscc .\installer.iss -DCI_VERSION="${{ steps.checktag.outputs.version }}" -DCI_VERSION_NUMERIC="${{ steps.checktag.outputs.version_major }}.${{ steps.checktag.outputs.version_minor }}.${{ steps.checktag.outputs.version_patch }}"
+
+      - name: Upload Installer
+        uses: actions/upload-artifact@v3
+        with:
+          name: setup
+          path: |
+            .\OpenHashTab_setup.exe
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: ${{ steps.checktag.outputs.is_release == 'yes' }}
+        with:
+          files: |
+            .\OpenHashTab_setup.exe
+          asset_path: .\symbols.7z
+          name: Release ${{ steps.checktag.outputs.version }}
+          prerelease: true
