--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,10 +56,10 @@ jobs:
       - name: Build OpenHashTab
         run: |
           cd ${{ github.workspace }}
-          $Env:CI_VERSION = ${{ steps.checktag.outputs.version }};
-          $Env:CI_VERSION_MAJOR = ${{ steps.checktag.outputs.version_major }};
-          $Env:CI_VERSION_MINOR = ${{ steps.checktag.outputs.version_minor }};
-          $Env:CI_VERSION_PATCH = ${{ steps.checktag.outputs.version_patch }};
+          $Env:CI_VERSION = "${{ steps.checktag.outputs.version }}";
+          $Env:CI_VERSION_MAJOR = "${{ steps.checktag.outputs.version_major }}";
+          $Env:CI_VERSION_MINOR = "${{ steps.checktag.outputs.version_minor }}";
+          $Env:CI_VERSION_PATCH = "${{ steps.checktag.outputs.version_patch }}";
           .\build_openhashtab.ps1
 
       - name: Build Installer
