--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -7,6 +7,27 @@
 
 #undef APSTUDIO_READONLY_SYMBOLS
 
+#define MUL0(a) (0)
+#define MUL1(a) (a)
+#define MUL2(a) (a+a)
+#define MUL3(a) (a+a+a)
+#define MUL4(a) (a+a+a+a)
+#define MUL5(a) (a+a+a+a+a)
+#define MUL6(a) (a+a+a+a+a+a)
+#define MUL7(a) (a+a+a+a+a+a+a)
+#define MUL8(a) (a+a+a+a+a+a+a+a)
+#define MUL9(a) (a+a+a+a+a+a+a+a+a)
+#define MUL10(a) (a+a+a+a+a+a+a+a+a+a)
+#define MUL11(a) (a+a+a+a+a+a+a+a+a+a+a)
+#define MUL12(a) (a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL13(a) (a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL14(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL15(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL16(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL(a, c) MUL ## c(a)
+
+#define MARGIN 6
+
 LANGUAGE LANG_NEUTRAL, SUBLANG_DEFAULT
 
 IDD_OPENHASHTAB_PROPPAGE DIALOGEX 0, 0, 225, 250
@@ -37,62 +58,58 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
   CONTROL         "",IDC_ALGORITHM_LIST,"SysListView32",LVS_LIST | LVS_ALIGNLEFT | LVS_NOSCROLL | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,6,6,168,258
 
-  CONTROL         "IDS_DISPLAY_UPPERCASE",IDC_CHECK_DISPLAY_UPPERCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,6,534,11
-  CONTROL         "IDS_LOOK_FOR_SUMFILES",IDC_CHECK_LOOK_FOR_SUMFILES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,18,534,11
-  CONTROL         "IDS_SUMFILE_UPPERCASE",IDC_CHECK_SUMFILE_UPPERCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,30,534,11
-  CONTROL         "IDS_SUMFILE_UNIX_ENDINGS",IDC_CHECK_SUMFILE_UNIX_ENDINGS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,42,534,11
-  CONTROL         "IDS_SUMFILE_USE_DOUBLE_SPACE",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,54,534,11
-  CONTROL         "IDS_SUMFILE_FORWARD_SLASHES",IDC_CHECK_SUMFILE_FORWARD_SLASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,66,534,11
-  CONTROL         "IDS_SUMFILE_DOT_HASH_COMPATIBLE",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,78,534,11
-  CONTROL         "IDS_SUMFILE_BANNER",IDC_CHECK_SUMFILE_BANNER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,90,534,11
-  CONTROL         "IDS_SUMFILE_BANNER_DATE",IDC_CHECK_SUMFILE_BANNER_DATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,102,522,11
-  CONTROL         "IDS_CLIPBOARD_AUTOENABLE",IDC_CHECK_CLIPBOARD_AUTOENABLE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,180,114,534,11
-  CONTROL         "IDS_CLIPBOARD_AUTOENABLE_IF_NONE",IDC_CHECK_CLIPBOARD_AUTOENABLE_IF_NONE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,126,522,11
-  CONTROL         "IDS_CLIPBOARD_AUTOENABLE_EXCLUSIVE",IDC_CHECK_CLIPBOARD_AUTOENABLE_EXCLUSIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,192,138,522,11
-  CONTROL         "IDS_CHECKAGAINST_AUTOFORMAT",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,150,534,11
-  CONTROL         "IDS_CHECKAGAINST_STRICT",IDC_CHECK_CHECKAGAINST_STRICT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,162,534,11
-  CONTROL         "IDS_HASH_SUMFILE_TOO",IDC_CHECK_HASH_SUMFILE_TOO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,174,534,11
-  CONTROL         "IDS_SUMFILE_ALGORITHM_ONLY",IDC_CHECK_SUMFILE_ALGORITHM_ONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,180,186,534,11
+#define OPTIONS_X 180
+#define OPTIONS_SUB_X 192
+#define OPTIONS_Y MARGIN
+#define OPTIONS_W 534
+#define OPTIONS_SUB_W 522
+#define OPTIONS_H 12
 
-  ICON            IDI_ICON1,IDC_ICON_1,6,270,21,20
+  AUTOCHECKBOX    "",IDC_CHECK_DISPLAY_UPPERCASE,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 0),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_LOOK_FOR_SUMFILES,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 1),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_UPPERCASE,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 2),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_UNIX_ENDINGS,            OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 3),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,        OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 4),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_FORWARD_SLASHES,         OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 5),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,     OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 6),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_BANNER,                  OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 7),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_BANNER_DATE,             OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 8),  OPTIONS_SUB_W,  OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE,            OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 9),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE_IF_NONE,    OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 10), OPTIONS_SUB_W,  OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE_EXCLUSIVE,  OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 11), OPTIONS_SUB_W,  OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,         OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 12), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CHECKAGAINST_STRICT,             OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 13), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_HASH_SUMFILE_TOO,                OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 14), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_ALGORITHM_ONLY,          OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 15), OPTIONS_W,      OPTIONS_H
+
+  ICON            IDI_ICON1,IDC_ICON_1,MARGIN,270,21,20
   LTEXT           "OpenHashTab",IDC_PROJECT_NAME,30,270,144,12
   CONTROL         "<a href=""https://github.com/namazso/OpenHashTab"">github.com/namazso/OpenHashTab</a>",IDC_PROJECT_LINK,"SysLink",WS_TABSTOP,30,281,144,12
-  PUSHBUTTON      "IDS_CHECK_FOR_UPDATES",IDC_BUTTON_CHECK_FOR_UPDATES,6,294,168,14
+  PUSHBUTTON      "",IDC_BUTTON_CHECK_FOR_UPDATES,MARGIN,294,168,14
 
-  GROUPBOX        "IDS_UNKNOWN_GROUP",IDC_UNKNOWN_GROUP,180,198,102,114
-  CONTROL         "IDS_FOREGROUND",IDC_UNKNOWN_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,186,210,90,12
-  CTEXT           "0123456789ABCDEF",IDC_UNKNOWN_SAMPLE,186,294,90,12
-  PUSHBUTTON      "fg color",IDC_UNKNOWN_FG_BTN,186,228,90,18
-  CONTROL         "IDS_BACKGROUND",IDC_UNKNOWN_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,186,252,90,12
-  PUSHBUTTON      "bg color",IDC_UNKNOWN_BG_BTN,186,270,90,18
+#define COLORS_X 180
+#define COLORS_X_INNER (COLORS_X + MARGIN)
+#define COLORS_Y (OPTIONS_Y + MUL(OPTIONS_H, 16))
+#define COLORS_W 108
+#define COLORS_W_GROUP 102
+#define COLORS_W_INNER (COLORS_W_GROUP - MARGIN - MARGIN)
 
-  GROUPBOX        "IDS_MATCH_GROUP",IDC_MATCH_GROUP,288,198,102,114
-  CONTROL         "IDS_FOREGROUND",IDC_MATCH_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,294,210,90,12
-  CTEXT           "0123456789ABCDEF",IDC_MATCH_SAMPLE,294,294,90,12
-  PUSHBUTTON      "fg color",IDC_MATCH_FG_BTN,294,228,90,18
-  CONTROL         "IDS_BACKGROUND",IDC_MATCH_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,294,252,90,12
-  PUSHBUTTON      "bg color",IDC_MATCH_BG_BTN,294,270,90,18
+#define MAKEGROUP(name, offset) \
+  GROUPBOX        "",                   IDC_ ## name ## _GROUP,    MUL(COLORS_W, offset) + COLORS_X,        COLORS_Y,       COLORS_W_GROUP,  114 \
+  AUTOCHECKBOX    "IDS_FOREGROUND",     IDC_ ## name ## _FG_CHECK, MUL(COLORS_W, offset) + COLORS_X_INNER,  COLORS_Y + 12,  COLORS_W_INNER,   12 \
+  PUSHBUTTON      "fg color",           IDC_ ## name ## _FG_BTN,   MUL(COLORS_W, offset) + COLORS_X_INNER,  COLORS_Y + 30,  COLORS_W_INNER,   18 \
+  AUTOCHECKBOX    "IDS_BACKGROUND",     IDC_ ## name ## _BG_CHECK, MUL(COLORS_W, offset) + COLORS_X_INNER,  COLORS_Y + 54,  COLORS_W_INNER,   12 \
+  PUSHBUTTON      "bg color",           IDC_ ## name ## _BG_BTN,   MUL(COLORS_W, offset) + COLORS_X_INNER,  COLORS_Y + 72,  COLORS_W_INNER,   18 \
+  CTEXT           "0123456789ABCDEF",   IDC_ ## name ## _SAMPLE,   MUL(COLORS_W, offset) + COLORS_X_INNER,  COLORS_Y + 96,  COLORS_W_INNER,   12
 
-  GROUPBOX        "IDS_MISMATCH_GROUP",IDC_MISMATCH_GROUP,396,198,102,114
-  CONTROL         "IDS_FOREGROUND",IDC_MISMATCH_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,402,210,90,12
-  CTEXT           "0123456789ABCDEF",IDC_MISMATCH_SAMPLE,402,294,90,12
-  PUSHBUTTON      "fg color",IDC_MISMATCH_FG_BTN,402,228,90,18
-  CONTROL         "IDS_BACKGROUND",IDC_MISMATCH_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,402,252,90,12
-  PUSHBUTTON      "bg color",IDC_MISMATCH_BG_BTN,402,270,90,18
+  MAKEGROUP(UNKNOWN, 0)
+  MAKEGROUP(MATCH, 1)
+  MAKEGROUP(MISMATCH, 2)
+  MAKEGROUP(INSECURE, 3)
+  MAKEGROUP(ERROR, 4)
 
-  GROUPBOX        "IDS_INSECURE_GROUP",IDC_INSECURE_GROUP,504,198,102,114
-  CONTROL         "IDS_FOREGROUND",IDC_INSECURE_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,210,90,12
-  CTEXT           "0123456789ABCDEF",IDC_INSECURE_SAMPLE,510,294,90,12
-  PUSHBUTTON      "fg color",IDC_INSECURE_FG_BTN,510,228,90,18
-  CONTROL         "IDS_BACKGROUND",IDC_INSECURE_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,510,252,90,12
-  PUSHBUTTON      "bg color",IDC_INSECURE_BG_BTN,510,270,90,18
+#undef MAKEGROUP
 
-  GROUPBOX        "IDS_ERROR_GROUP",IDC_ERROR_GROUP,612,198,102,114
-  CONTROL         "IDS_FOREGROUND",IDC_ERROR_FG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,618,210,90,12
-  CTEXT           "0123456789ABCDEF",IDC_ERROR_SAMPLE,618,294,90,12
-  PUSHBUTTON      "fg color",IDC_ERROR_FG_BTN,618,228,90,18
-  CONTROL         "IDS_BACKGROUND",IDC_ERROR_BG_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,618,252,90,12
-  PUSHBUTTON      "bg color",IDC_ERROR_BG_BTN,618,270,90,18
 END
 
 IDD_OPENHASHTAB_PROPPAGE AFX_DIALOG_LAYOUT
