Add monospace font option (fixes #153)

--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -24,6 +24,10 @@
 #define MUL14(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a)
 #define MUL15(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
 #define MUL16(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL17(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL18(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL19(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
+#define MUL20(a) (a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a+a)
 #define MUL(a, c) MUL ## c(a)
 
 #define MARGIN 6
@@ -66,21 +70,22 @@ BEGIN
 #define OPTIONS_H 12
 
   AUTOCHECKBOX    "",IDC_CHECK_DISPLAY_UPPERCASE,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 0),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_LOOK_FOR_SUMFILES,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 1),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_UPPERCASE,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 2),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_UNIX_ENDINGS,            OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 3),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,        OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 4),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_FORWARD_SLASHES,         OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 5),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,     OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 6),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_BANNER,                  OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 7),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_BANNER_DATE,             OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 8),  OPTIONS_SUB_W,  OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE,            OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 9),  OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE_IF_NONE,    OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 10), OPTIONS_SUB_W,  OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE_EXCLUSIVE,  OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 11), OPTIONS_SUB_W,  OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,         OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 12), OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_CHECKAGAINST_STRICT,             OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 13), OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_HASH_SUMFILE_TOO,                OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 14), OPTIONS_W,      OPTIONS_H
-  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_ALGORITHM_ONLY,          OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 15), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_DISPLAY_MONOSPACE,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 1),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_LOOK_FOR_SUMFILES,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 2),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_UPPERCASE,               OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 3),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_UNIX_ENDINGS,            OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 4),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_USE_DOUBLE_SPACE,        OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 5),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_FORWARD_SLASHES,         OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 6),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_DOT_HASH_COMPATIBLE,     OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 7),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_BANNER,                  OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 8),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_BANNER_DATE,             OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 9),  OPTIONS_SUB_W,  OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE,            OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 10),  OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE_IF_NONE,    OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 11), OPTIONS_SUB_W,  OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CLIPBOARD_AUTOENABLE_EXCLUSIVE,  OPTIONS_SUB_X,  OPTIONS_Y + MUL(OPTIONS_H, 12), OPTIONS_SUB_W,  OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CHECKAGAINST_AUTOFORMAT,         OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 13), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_CHECKAGAINST_STRICT,             OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 14), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_HASH_SUMFILE_TOO,                OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 15), OPTIONS_W,      OPTIONS_H
+  AUTOCHECKBOX    "",IDC_CHECK_SUMFILE_ALGORITHM_ONLY,          OPTIONS_X,      OPTIONS_Y + MUL(OPTIONS_H, 16), OPTIONS_W,      OPTIONS_H
 
   ICON            IDI_ICON1,IDC_ICON_1,MARGIN,270,21,20
   LTEXT           "OpenHashTab",IDC_PROJECT_NAME,30,270,144,12
@@ -89,7 +94,7 @@ BEGIN
 
 #define COLORS_X 180
 #define COLORS_X_INNER (COLORS_X + MARGIN)
-#define COLORS_Y (OPTIONS_Y + MUL(OPTIONS_H, 16))
+#define COLORS_Y (OPTIONS_Y + MUL(OPTIONS_H, 17))
 #define COLORS_W 108
 #define COLORS_W_GROUP 102
 #define COLORS_W_INNER (COLORS_W_GROUP - MARGIN - MARGIN)
