Recalculate layout (fixes #173)

--- a/OpenHashTab/OpenHashTab.rc
+++ b/OpenHashTab/OpenHashTab.rc
@@ -34,28 +34,61 @@
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_DEFAULT
 
-IDD_OPENHASHTAB_PROPPAGE DIALOGEX 0, 0, 225, 250
+IDD_OPENHASHTAB_PROPPAGE DIALOGEX 0, 0, 226, 250
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "OpenHashTab"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-  LTEXT           "IDS_CHECK_AGAINST",IDC_STATIC_CHECK_AGAINST,7,164,211,11
-  CONTROL         "",IDC_HASH_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,211,142
-  EDITTEXT        IDC_EDIT_HASH,7,175,211,13,ES_AUTOHSCROLL | WS_DISABLED
-  COMBOBOX        IDC_COMBO_EXPORT,7,217,89,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-  LTEXT           "IDS_EXPORT_TO",IDC_STATIC_EXPORT_TO,7,206,211,11
-  PUSHBUTTON      "IDS_EXPORT_BTN",IDC_BUTTON_EXPORT,162,217,56,14,WS_DISABLED
-  LTEXT           "",IDC_STATIC_CHECK_RESULT,7,191,211,11
-  LTEXT           "",IDC_STATIC_SUMFILE,7,152,98,11
-  RTEXT           "IDS_PROCESSING",IDC_STATIC_PROCESSING,108,152,72,11
-  PUSHBUTTON      "IDS_CLIPBOARD",IDC_BUTTON_CLIPBOARD,102,217,54,14,WS_DISABLED
-  PUSHBUTTON      "*",IDC_BUTTON_SETTINGS,202,150,16,16,BS_ICON | WS_DISABLED
-  CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,233,149,14
-  PUSHBUTTON      "IDS_CANCEL",IDC_BUTTON_CANCEL,162,234,56,14
-  PUSHBUTTON      "v",IDC_BUTTON_VT,184,150,16,16,BS_ICON | WS_DISABLED
+  CONTROL         "",IDC_HASH_LIST,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,6,214,142
+
+  // First row: is sumfile, processing/done, VT button, Settings button
+  LTEXT           "",IDC_STATIC_SUMFILE,6,152,98,12
+  RTEXT           "IDS_PROCESSING",IDC_STATIC_PROCESSING,104,152,80,12
+  PUSHBUTTON      "V",IDC_BUTTON_VT,186,150,16,16,BS_ICON | WS_DISABLED
+  PUSHBUTTON      "S",IDC_BUTTON_SETTINGS,204,150,16,16,BS_ICON | WS_DISABLED
+
+  // Check against label, vertically aligned to the text, not the buttons
+  LTEXT           "IDS_CHECK_AGAINST",IDC_STATIC_CHECK_AGAINST,6,164,180,12
+  // Check against TextEdit
+  EDITTEXT        IDC_EDIT_HASH,6,176,214,14,ES_AUTOHSCROLL | WS_DISABLED
+  // Check against result
+  LTEXT           "",IDC_STATIC_CHECK_RESULT,6,190,214,12
+
+  // Export stuff
+  LTEXT           "IDS_EXPORT_TO",IDC_STATIC_EXPORT_TO,6,206,214,10
+  COMBOBOX        IDC_COMBO_EXPORT,6,218,88,14,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+  PUSHBUTTON      "IDS_CLIPBOARD",IDC_BUTTON_CLIPBOARD,98,218,64,14,WS_DISABLED
+  PUSHBUTTON      "IDS_EXPORT_BTN",IDC_BUTTON_EXPORT,166,218,54,14,WS_DISABLED
+
+  // Progress bar and Cancel button
+  CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,6,234,156,10
+  PUSHBUTTON      "IDS_CANCEL",IDC_BUTTON_CANCEL,166,232,54,14
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 723, 320
+IDD_OPENHASHTAB_PROPPAGE AFX_DIALOG_LAYOUT
+BEGIN
+  0,
+  0,    0,    100,  100,
+
+  0,    100,  0,    0,
+  100,  100,  0,    0,
+  100,  100,  0,    0
+  100,  100,  0,    0,
+
+  0,    100,  0,    0,
+  0,    100,  100,  0,
+  0,    100,  100,  0,
+
+  0,    100,  0,    0,
+  0,    100,  100,  0,
+  100,  100,  0,    0,
+  100,  100,  0,    0,
+
+  0,    100,  100,  0,
+  100,  100,  0,    0,
+END
+
+IDD_SETTINGS DIALOGEX 0, 0, 720, 320
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "*"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -115,25 +148,6 @@ BEGIN
 
 #undef MAKEGROUP
 
-END
-
-IDD_OPENHASHTAB_PROPPAGE AFX_DIALOG_LAYOUT
-BEGIN
-  0,
-  0,    100,  0,    0,
-  0,    0,    100,  100,
-  0,    100,  100,  0,
-  0,    100,  100,  0,
-  0,    100,  0,    0,
-  100,  100,  0,    0,
-  0,    100,  100,  0,
-  0,    100,  0,    0,
-  100,  100,  0,    0,
-  100,  100,  0,    0,
-  100,  100,  0,    0,
-  0,    100,  100,  0,
-  100,  100,  0,    0,
-  100,  100,  0,    0
 END
 
 IDD_SETTINGS AFX_DIALOG_LAYOUT
